[gd_scene load_steps=2 format=3 uid="uid://dwokgs8jnu5a0"]

[ext_resource type="Script" uid="uid://7d5ui5m6xyw" path="res://ca3 framework/2D Battle/framework/VariableNodes/variable_nodes.gd" id="1_a6akn"]

[node name="VariableNodes" type="Node"]
script = ExtResource("1_a6akn")
StartHP = 100
StartMana = 100
StartPlayerDamage = 10
StartEnemyDamage = 10
HP = 100
Mana = 100
player_damage = 10
Countries_finished = Array[bool]([false, false, false, false])

[node name="ComboReset" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ComboReset" to="." method="_on_combo_reset_timeout"]
